# mssql_mcp_server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  ISSUE_STATUS.md  Makefile  PRODUCTION_READINESS.md  PUBLISHING.md  README.md  SECURITY.md  close_fixed_issues.sh  docker-compose.example.yml  docker-compose.yml  issue_responses.md  issue_responses_final.md  open_issue_responses.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_comment_fix.py  test_connection.py  test_local_install.py
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml
src/mssql_mcp_server/: __main__.py  server.py
src/yulin_mssql_mcp/: __init__.py  __main__.py  server.py
tests/: README.md  conftest.py  test_config.py  test_error_handling.py  test_integration.py  test_performance.py  test_security.py  test_server.py
